# ME-DataCtrCostRev

./: .gitignore  ME_DataCtrCostRev.py  README.md  me_datactrcostrev_app.py  pyproject.toml
data/: 2024 FULL VALUE TAX RATES HISTORY with percentage increases.xls  ME_FullValuePropTaxRates_cnty_2024.csv  us_data_centers_FMV.xlsx
data/shp/: README.md
images/: me_elec_fmv_plot.html  us_elec_fmv_plot.html
